# anki

./: .gitignore  DEPLOYMENT.md  README.md  README_NEW.md  auto_generate_decks.py  generate_apkg.py  generate_decks.py  requirements.txt  show_tags.py  test_generator.py  test_tags.py
anki_deck_generator/: auto_generator.py  cli.py  config.py  core.py
apkg/: condicional_simple_anki.apkg  final_spanish_vocab_deck.apkg  futuro_vs_ir_a_cloze_anki.apkg  futuro_vs_ir_a_extended_anki.apkg  futuro_vs_ir_a_master_anki.apkg  generation_history.json  ir_a_infinitive_deck_basic.apkg  presente_vs_estar_gerundio_deck.apkg  preterite_indefinido_all_irregulars.apkg  preterite_indefinido_deck_basic.apkg  preterito_imperfecto_deck.apkg  preterito_imperfecto_irregular_deck.apkg  preterito_perfecto_deck.apkg  preterito_pluscuamperfecto_master_anki.apkg  reflexive_verbs_deck.apkg  ser_estar_hay_tener_deck.apkg  singular_plural_adjective_agreement_deck.apkg  spanish_anki_cards_with_hooks.apkg  spanish_future_simple_deck.apkg  spanish_prepositions_cloze.apkg  spanish_present_tense_irregular_verbs_cloze.apkg  test1.apkg  (+10 more)
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/endpoints/: cards.py  decks.py  import_export.py  tags.py  templates.py
backend/app/core/: config.py
backend/app/models/: __init__.py  card.py  deck.py  template.py
backend/app/services/: card_service.py  deck_service.py  import_service.py  template_service.py
backend/tests/: test_api_import.py  test_card_service.py  test_import_service.py
(+58 files in other folders)
